# codetrackr

./: README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/asset/: admin.py  enums.py  models.py  serializers.py  views.py
src/asset/migrations/: 0001_initial.py  0002_asset_status_supplier_status.py  0003_historicalsupplier_historicalasset.py  0004_alter_asset_location_alter_asset_responsible_and_more.py
src/asset/tests/: conftest.py  test_asset_viewset.py  test_reports.py  test_supplier_viewset.py
src/codetrackr/: asgi.py  settings.py  urls.py  wsgi.py
